Cannot tab out of WKWebView on macOS https://bugs.webkit.org/show_bug.cgi?id=161448 <rdar://problem/28100085>

Reviewed by Dean Jackson.

Source/WebCore/PAL:

* pal/spi/mac/NSViewSPI.h:
* pal/spi/mac/NSWindowSPI.h:
Move some SPI declarations in here from WebKitLegacy.

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::takeFocus):
If the UIDelegate doesn't implement takeFocus, provide a simple default
implementation that just uses AppKit's key view loop to move the focus.

* UIProcess/API/APIUIClient.h:
(API::UIClient::takeFocus):
* UIProcess/API/C/WKPage.cpp:
(WKPageSetPageUIClient):
* UIProcess/Cocoa/UIDelegate.h:
* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::takeFocus):
Make API::UIClient's takeFocus return a bool indicating whether the
client implements it or not.

* UIProcess/PageClient.h:
* UIProcess/mac/PageClientImplMac.h:
* UIProcess/mac/PageClientImplMac.mm:
(WebKit::PageClientImpl::takeFocus):
Plumb takeFocus to WebViewImpl.

* UIProcess/Cocoa/WebViewImpl.h:
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::takeFocus):
Borrow the relevant portion of WebKitLegacy's implementation of takeFocus,
shifting focus to the next/previous key view in the window.

Source/WebKitLegacy/mac:

* WebCoreSupport/WebChromeClient.mm:
* WebView/WebView.mm:
Make use of SPI headers.

Tools:

Add a test that tabbing into and out of WKWebView works correctly.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/CommandBackForward.mm:
(WebKit2_CommandBackForwardTest::SetUp):
(-[CommandBackForwardOffscreenWindow isKeyWindow]): Deleted.
(-[CommandBackForwardOffscreenWindow isVisible]): Deleted.
* TestWebKitAPI/Tests/WebKitCocoa/TabOutOfWebView.mm: Added.
(-[FocusableView canBecomeKeyView]):
(TEST):
* TestWebKitAPI/mac/OffscreenWindow.h: Added.
* TestWebKitAPI/mac/OffscreenWindow.mm: Added.
(-[OffscreenWindow initWithSize:]):
(-[OffscreenWindow isKeyWindow]):
(-[OffscreenWindow isVisible]):
* TestWebKitAPI/mac/PlatformWebViewMac.mm:
(TestWebKitAPI::PlatformWebView::initialize):
(-[ActiveOffscreenWindow isKeyWindow]): Deleted.
(-[ActiveOffscreenWindow isVisible]): Deleted.
Factor ActiveOffscreenWindow out into OffscreenWindow and share it.


Canonical link: https://commits.webkit.org/207973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240010 268f45cc-cd09-0410-ab3c-d52691b4dbfc